# esp-idf-kconfig

./: .git-blame-ignore-revs  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  check_copyright_config.yaml  check_copyright_ignore.txt  pyproject.toml  setup.py
.github/workflows/: dangerjs.yml  issue_comment.yml  jira.yml  new_issues.yml  new_prs.yml  pre_commit_check.yml  release_pypi.yml
docs/: DOCUMENTATION.md  README.md  conf_common.py  utils.sh
docs/_static/: esp_idf_kconfig_versions.js
docs/en/: conf.py  index.rst
docs/en/developer-guide/: contributing.rst  good-kconfig.rst  index.rst  migration-guide.rst  writing-tests.rst
docs/en/kconfcheck/: index.rst
docs/en/kconfiglib/: configuration-report.rst  defaults.rst  deprecated-options.rst  differences.rst  formal-base.rst  index.rst  language.rst
docs/en/kconfserver/: index.rst
esp_idf_kconfig/: __init__.py  __main__.py  gen_kconfig_doc.py  kconfgen.py  kconfserver.py
esp_kconfiglib/: __init__.py  constants.py  core.py  deprecated.py  errors.py  kconfig_grammar.py  kconfig_parser.py  report.py
esp_menuconfig/: __init__.py  __main__.py  app.py  core.py  formatting.py  idf_headers.py  model.py  screens.py  widgets.py
kconfcheck/: __init__.py  __main__.py  check_deprecated_options.py  core.py
kconfgen/: __init__.py  __main__.py  core.py
kconfiglib/: __init__.py  constants.py  core.py  kconfig_grammar.py  kconfig_parser.py  report.py
kconfserver/: __init__.py  __main__.py  core.py
menuconfig/: __init__.py  __main__.py  core.py
test/gen_kconfig_doc/: Kconfig  Kconfig.chipa  test_kconfig_out.py  test_target_visibility.py
test/integration/: README.md  conftest.py  pytest.ini  test_build.py  test_config_defaults.py  test_fast_sanity.py  test_menuconfig_textual.py
test/integration/fixtures/: examples.py
test/integration/helpers/: env.py
test/kconfcheck/: Kconfig  test_deprecated_options.py  test_kconfcheck.py
test/kconfcheck/sdkconfigs/check_deprecated/: sdkconfig.defaults.with_deprecated  sdkconfig.defaults.without_deprecated  sdkconfig.rename
test/kconfcheck/sdkconfigs/check_deprecated_scoped/: CMakeLists.txt  sdkconfig.defaults.top_level
test/kconfcheck/sdkconfigs/correct/: correct_inversion.sdkconfig.rename  correct_prefix.sdkconfig.rename  correct_whitespaces.sdkconfig.rename  lowercase_old_name.sdkconfig.rename
test/kconfcheck/sdkconfigs/incorrect/: duplicit_line.sdkconfig.rename  no_prefix.sdkconfig.rename  no_uppercase.sdkconfig.rename  repeated_old.sdkconfig.rename  wrong_inversion.sdkconfig.rename
test/kconfcheck/sdkconfigs/suggestions/: duplicit_line.sdkconfig.rename.suggestions  no_prefix.sdkconfig.rename.suggestions  no_uppercase.sdkconfig.rename.suggestions  only_one_name.sdkconfig.rename.suggestions  too_long_name.sdkconfig.rename.suggestions  wrong_inversion.sdkconfig.rename.suggestions
test/kconfgen/: test_kconfgen.py  test_kconfgen_menuconfig.py
test/kconfiglib/: test_deprecated.py  test_expression.py  test_kconfiglib.py  test_kconfiglib_loading.py  test_kconfiglib_sync_deps.py  test_write_min_config.py
test/kconfiglib/deprecated/: Kconfig  rename.duplicate_old_a  rename.missing_prefix  rename.same_name  rename.syntax_error  sdkconfig.both_names  sdkconfig.duplicate_old_a  sdkconfig.inversion  sdkconfig.inversion_unset  sdkconfig.legacy_speed  sdkconfig.new_names  sdkconfig.old_names  sdkconfig.rename  sdkconfig.rename2  sdkconfig.unknown  sdkconfig.unset_noninverted  sdkconfig.with_deprecated_block
test/kconfiglib/kconfigs/: Kconfig.choice_loading  Kconfig.choice_non_first_default  Kconfig.choices  Kconfig.default_pragma_regression  Kconfig.default_validity  Kconfig.deprecated_vals  Kconfig.disabled_symbols_choices  Kconfig.idf_min_config  Kconfig.idf_min_config_labels  Kconfig.inversed_dep_order_1  Kconfig.invisible_choice_all_n  Kconfig.loading_defaults  Kconfig.multiple_definition_report  Kconfig.multiple_value_set  Kconfig.nested_choices  Kconfig.promptless_user_value  Kconfig.string_escape
test/kconfiglib/kconfigs/errors/: InvalidEntryInChoice.in  NoMainmenu.in  UndefinedMacro.in  UndefinedMacro.stderr
test/kconfiglib/kconfigs/ok/: Choice.in  Choice.out  ChoiceWithIf.in  ChoiceWithIf.out  Comment.in  Comment.out  EmptySourced.in  EnvironmentVariable.in  EnvironmentVariable.out  Expressions.in  Expressions.out  Help.in  Help.out  If.in  If.out  IfInsideChoice.in  IfInsideChoice.out  IndirectValueSetComplex.in  IndirectValueSetComplex.out  IndirectValueSetSimple.in  IndirectValueSetSimple.out  Macro.in  Macro.out  Menu.in  Menu.out  MenuInsideChoice.in  MenuInsideChoice.out  MultipleDefinitionWithIgnore.out  OneConfig.in  OneConfig.out  Prompt.in  Prompt.out  SelectImply.in  SelectImply.out  SetMultipleSources.in  SetMultipleSources.out  SetWithMenuconfig.in  SetWithMenuconfig.out  SeveralConfigs.in  SeveralConfigs.out  (+10 more)
test/kconfiglib/kconfigs/warnings/: BoolLiteralDefaults.in  BoolLiteralDefaults.out  CommentWhitespace.in  (+35 more)
test/kconfiglib/sdkconfigs/: sdkconfig.choice.different_default  sdkconfig.choice_all_disabled  sdkconfig.choice_multiple_y  sdkconfig.choice_non_first_default  sdkconfig.choice_non_first_userset  sdkconfig.default_pragma_regression  sdkconfig.dependent_choice  sdkconfig.deprecated_vals  sdkconfig.differing_defaults  sdkconfig.disabled_symbols_choices  sdkconfig.invalid_defaults  sdkconfig.inversed_dep_order_1  sdkconfig.invisible_choice_all_n  sdkconfig.invisible_choice_with_y  sdkconfig.multiset_choices  sdkconfig.multiset_symbols  sdkconfig.promptless_user_value  sdkconfig.unselect_selected_symbol  sdkconfig.valid_defaults
test/kconfserver/: Kconfig  README.md  test_kconfserver.py  test_kconfserver_output.py  testcases_v2.txt  testcases_v3.txt
test/menuconfig/: test_menuconfig.py  test_menuconfig_deprecated.py  test_menuconfig_pilot.py
test/menuconfig/kconfigs/: Kconfig  Kconfig.choice_default  Kconfig.choice_explicit_default  Kconfig.default_value_changed  Kconfig.float  Kconfig.indirect_sets  Kconfig.pilot_all_scalars  Kconfig.pilot_choice  Kconfig.pilot_submenu  Kconfig.warning
(+20 files in other folders)
